--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ sites/*/*settings*.php
 # Ignore server SSH settings
 .idea/ssh*.xml
 
+.idea/
+
 # =========================
 # Operating System Files
 # =========================
